fix align

--- a/css/style.css
+++ b/css/style.css
@@ -916,5 +916,9 @@ Parallax
         padding: 0;
     }
 
+    .desc {
+        text-align: justify;
+    }
+
 
 }
